fixed cart showing on mobile home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,6 +9,11 @@
         height: auto;
     }
 
+    @include respond(phone) {
+        padding-top: 0;
+        margin-top: 0;
+    }
+
     &__content {
         @include respond(tab-land) {
             margin-bottom: 1rem;
